usr/src/uts/common/fs/sockfs/nl7curi.c
@@ -926,7 +926,7 @@ add:
 	ruri->hit = 0;
 	ruri->expire = -1;
 	ruri->response.sz = 0;
-	ruri->proc = (struct sonode *)~NULL;
+	ruri->proc = (struct sonode *)~0;
 	cv_init(&ruri->waiting, NULL, CV_DEFAULT, NULL);
 	mutex_init(&ruri->proclock, NULL, MUTEX_DEFAULT, NULL);
 	uri_add(ruri, RW_READER, nonblocking);
@@ -1276,7 +1276,7 @@ nl7c_readfile(file_t *fp, u_offset_t *off, int *len, int max, int *ret)
 
 int
 nl7c_sendfilev(struct sonode *so, u_offset_t *fileoff, sendfilevec_t *sfvp,
-	int sfvc, ssize_t *xfer)
+    int sfvc, ssize_t *xfer)
 {
 	sotpi_info_t	*sti = SOTOTPI(so);
 	uri_desc_t	*uri = (uri_desc_t *)sti->sti_nl7c_uri;
@@ -1480,7 +1480,7 @@ void
 nl7c_close(struct sonode *so)
 {
 	sotpi_info_t	*sti = SOTOTPI(so);
-	uri_desc_t 	*uri = (uri_desc_t *)sti->sti_nl7c_uri;
+	uri_desc_t	*uri = (uri_desc_t *)sti->sti_nl7c_uri;
 
 	if (uri == NULL) {
 		/*
@@ -1585,15 +1585,8 @@ uri_segmap_map(uri_rd_t *rdp, int bytes)
  */
 
 static mblk_t *
-uri_desb_chop(
-	char 		**data,
-	size_t		*sz,
-	int 		*bytes,
-	uri_desb_t 	*temp,
-	int		max_mblk,
-	char		*eoh,
-	mblk_t		*persist
-)
+uri_desb_chop(char **data, size_t *sz, int *bytes, uri_desb_t *temp,
+    int max_mblk, char *eoh, mblk_t *persist)
 {
 	char		*ldata = *data;
 	size_t		lsz = *sz;
